# iscabbs-client

./: .gitattributes  .gitignore  ChangeLog  INSTALL.socks  INSTALL.term  INSTALL.vms  Makefile.am  Makefile.in  README  TODO  acconfig.h  autofix.c  bbs.1  bbsrc.c  color.c  config.c  config.h.in  configure.ac  defs.h  edit.c  ext.h  filter.c  getline.c  global.c  info.c  inkey.c  main.c  proto.h  queue.c  slist.c  string_buf.c  string_buf.h  sysio.c  sysio.h  telnet.c  telnet.h  ulist.c  unix.c  unix.h  users.h  (+1 more)
old/: ChangeLog-2.0.txt  ChangeLog-2.1.txt  ChangeLog-2.2.txt  INSTALL.socks  INSTALL.term  INSTALL.unix  README-1.5  README-2.2
socks/: COPYRIGHTS  Rconnect.c  Rgethostbyname.c  SendGetDst.c  porttoserv.c  shell_cmd.c  socks.h  socks_ckcf.c  socks_rdconf.c  socks_rdfz.c  utils.c
