bin_PROGRAMS = bbs
bbs_SOURCES =  \
	bbsrc.c \
	color.c \
	config.c \
	defs.h \
	edit.c \
	ext.h \
	filter.c \
	getline.c \
	global.c \
	info.c \
	inkey.c \
	main.c \
	proto.h \
	queue.c \
	slist.c \
	sysio.c \
	sysio.h \
	telnet.c \
	telnet.h \
	unix.c \
	unix.h \
	users.h \
	utility.c

dist_man_MANS = bbs.1
